fixed image too big bug

--- a/src/style/pages.css
+++ b/src/style/pages.css
@@ -73,3 +73,8 @@
 .contact:hover {
   @apply cursor-pointer text-highlight;
 }
+
+.Markdown img {
+  max-height: 20em;
+  @apply mx-auto rounded-3xl;
+}
